--- a/template.yaml
+++ b/template.yaml
@@ -280,49 +280,46 @@ Resources:
     Type: AWS::SSM::Document
     Properties: 
       Name: Custom-CloudWatchAgentInstallAndConfig
-      DocumentType: Automation
+      DocumentType: Command
       Content: 
-        schemaVersion: "0.3"
+        schemaVersion: "2.2"
         assumeRole: !GetAtt CloudWatchAutomationServiceRole.Arn
         description: "Automates the installation and configuration of the CloudWatch agent."
         mainSteps:
           - name: InstallCloudWatch
             description: Installs the CloudWatch agent using the document 'AWS-ConfigureAWSPackage'.
-            action: aws:runCommand
+            action: aws:runDocument
             maxAttempts: 5
             inputs:
-              DocumentName: AWS-ConfigureAWSPackage
-              Parameters:
-                action: 
-                  - Install
-                installationType: 
-                  - Uninstall and reinstall
-                name: 
-                  - AmazonCloudWatchAgent
-                version: 
-                  - latest
+              documentType: SSMDocument
+              documentPath: AWS-ConfigureAWSPackage
+              documentParameters:
+                action: Install
+                installationType: Uninstall and reinstall
+                name: AmazonCloudWatchAgent
+                version: latest
           - name: ConfigureCloudWatch
             description: Configures the CloudWatch agent using the document 'AmazonCloudWatch-ManageAgent'.
-            action: aws:runCommand
+            action: aws:runDocument
             maxAttempts: 5
             inputs:
-              DocumentName: AmazonCloudWatch-ManageAgent
-              Parameters:
-                action: 
-                  - configure
-                mode: 
-                  - ec2
-                optionalConfigurationSource: 
-                  - ssm
-                optionalConfigurationLocation: 
-                  - CloudWatchAgentConfig
-                optionalRestart:
-                  - "yes"
+              documentType: SSMDocument
+              documentPath: AmazonCloudWatch-ManageAgent
+              documentParameters:
+                action: configure
+                mode: ec2
+                optionalConfigurationSource: ssm
+                optionalConfigurationLocation: CloudWatchAgentConfig
+                optionalRestart: "yes" # DO NOT REMOVE QUOTES
   
+                
   # Creates association which is reponsible for running CloudWatch agent install.
-  # CloudWatchAgentInstallAssociation:
-  #   Type: AWS::SSM::Association
-  #   Properties: 
-  #     AssociationName: CloudWatchAgentInstallAndConfigure
-  #     Name: !Ref CloudWatchAgentAutomation
-  #     InstanceId: !Ref Ec2CloudWatchInstance
+  CloudWatchAgentInstallAssociation:
+    Type: AWS::SSM::Association
+    Properties: 
+      AssociationName: CloudWatchAgentInstallAndConfigure
+      Name: !Ref CloudWatchAgentAutomation
+      Targets: 
+        - Key: InstanceIds
+          Values: 
+            - !Ref Ec2CloudWatchInstance
